[package]
name = "tdf_utils"
version = "0.1.5"
authors = ["qiuzhanghua <qiuzhanghua@icloud.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Utilities, such as tree"
homepage = "https://github.com/qiuzhanghua/tdf_utils/"
repository = "https://github.com/qiuzhanghua/tdf_utils/"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
json = "0.12"